2000-04-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* struct.c (scm_alloc_struct, scm_struct_free_0,
	scm_struct_free_light, scm_struct_free_standard,
	scm_struct_free_entity, scm_make_struct, scm_make_vtable_vtable),
	struct.h (scm_struct_free_t, scm_alloc_struct, scm_struct_free_0,
	scm_struct_free_light, scm_struct_free_standard,
	scm_struct_free_entity):  Struct data regions (and thus also
	vtable data regions) are now C arrays of scm_bits_t elements.

	* gc.c (scm_gc_mark, scm_gc_sweep, scm_unhash_name):  Made the
	mixup of glocs and structs explicit.

	* gc.c (scm_unprotect_object):  Compare SCM's with SCM_EQ_P.

2000-04-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (scm_unmemocar):  Use macros to test for gloc cell.
	Minimize scope of variable 'ir'.

	* eval.h (SCM_IFRAME, SCM_IDIST), weaks.h (SCM_IS_WHVEC_ANY):
	Added missing call to SCM_UNPACK.

2000-04-17  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* validate.h (SCM_VALIDATE_INUM_RANGE_COPY,
	SCM_VALIDATE_NUMBER_COPY): New macros.

2000-04-16  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* script.c (scm_compile_shell_switches): Added --debug option.

2000-04-16  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* vectors.c (scm_vector_set_x): Return SCM_UNSPECIFIED (as
	specified by R5RS).

2000-04-15  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* ports.h (SCM_INPUT_PORT_P, SCM_OUTPUT_PORT_P): New macros.
	(SCM_INPORTP, SCM_OUTPORTP): Marked as deprecated.

	* validate.h (SCM_VALIDATE_INPUT_PORT, SCM_VALIDATE_OUTPUT_PORT):
	New macros.
	Cleanup of code layout.

	* ports.c, ports.h (close-input-port, close-output-port): New R5RS
	procedures.

2000-04-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* continuations.c (scm_make_cont, scm_dynthrow):  Completely
	separated implementations for defined (CHEAP_CONTINUATIONS) and
	!defined (CHEAP_CONTINUATIONS).  Also, now using memcpy for stack
	copying.

	* continuations.c (grow_stack):  Renamed from grow_throw.
